--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -100,6 +100,9 @@ jobs:
         run: |
           cd ${CHART_DIR}
           helm dependency build
+          # Get the chart version
+          CHART_VERSION=$(helm show chart . | grep '^version:' | cut -d' ' -f2)
+          echo "CHART_VERSION=${CHART_VERSION}" >> $GITHUB_ENV
           cd -
           helm package ${CHART_DIR} -d .helm-charts
 
@@ -108,7 +111,7 @@ jobs:
           HELM_EXPERIMENTAL_OCI: 1
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io --username ${{ github.actor }} --password-stdin
-          helm push .helm-charts/sopSeed-${{ env.CHART_VERSION }}.tgz oci://ghcr.io/${{ github.repository_owner }}/sopSeed:${{ env.CHART_VERSION }}
+          helm push .helm-charts/sopSeed-${CHART_VERSION}.tgz oci://ghcr.io/${{ github.repository_owner }}/sopseed
 
       - name: Create GitHub Release
         id: create_release
