--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -111,6 +111,7 @@ jobs:
           HELM_EXPERIMENTAL_OCI: 1
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io --username ${{ github.actor }} --password-stdin
+          echo "Repository Owner: ${{ github.repository_owner }}"
           helm push .helm-charts/sopSeed-${CHART_VERSION}.tgz oci://ghcr.io/${{ github.repository_owner }}
 
       - name: Create GitHub Release
